<resources>
    <string name="app_name">HonduContact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_number">Add Number</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="github">Github</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="save">Save</string>
    <string name="error_field">Mandatory Field</string>
    <string name="save_success">Save Success :)</string>
    <string name="failed_save">Failed Save :(</string>
    <string name="failed_take_photo">Failed to Storage Photo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="important">Important</string>
    <string name="confirmation_delete">Are you sure to delete ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="update_success">Update Success</string>
</resources>
